err/products.loginlockout.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/LoginLockout'...
Listing './lib/python3.5/site-packages/Products/LoginLockout/i18n'...
Listing './lib/python3.5/site-packages/Products/LoginLockout/profiles'...
Listing './lib/python3.5/site-packages/Products/LoginLockout/profiles/default'...
Listing './lib/python3.5/site-packages/Products/LoginLockout/skins'...
Listing './lib/python3.5/site-packages/Products/LoginLockout/skins/loginlockout_templates'...
Compiling './lib/python3.5/site-packages/Products/LoginLockout/skins/loginlockout_templates/plone_change_password.py'...
***   File "./lib/python3.5/site-packages/Products/LoginLockout/skins/loginlockout_templates/plone_change_password.py", line 15
    return context.plone_memberprefs_panel()
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/LoginLockout/tests.py'...
***   File "./lib/python3.5/site-packages/Products/LoginLockout/tests.py", line 9
    print "Start installProduct"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/LoginLockout/www'...
Listing './lib/python3.5/site-packages/Products.LoginLockout-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
